updated the content for chapter2

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ pre code {
 <ul>
 <li><a href="#introduction-to-open-data-science---course-project">Introduction to Open Data Science - Course Project</a></li>
 <li><a href="#about-the-project">About the project</a></li>
-<li><a href="#insert-chapter-2-title-here">Insert chapter 2 title here</a></li>
+<li><a href="#insert-chapter-2-liner-regression">Insert chapter 2 Liner regression</a></li>
 </ul>
 </div>
 
@@ -187,7 +187,7 @@ pre code {
 <pre class="r"><code># This is a so-called &quot;R chunk&quot; where you can write R code.
 
 date()</code></pre>
-<pre><code>## [1] &quot;Wed Nov 03 10:57:12 2021&quot;</code></pre>
+<pre><code>## [1] &quot;Thu Nov 04 17:11:19 2021&quot;</code></pre>
 <p>The text continues here.</p>
 <p>1 The course organised quite well for me so far as i have learned also reviewed several R skills, in particular linking the Rstaduio with git.</p>
 <p>2 I want to learn the basic statistic practice skill by R and i feel that the course fit my need pretty well.</p>
@@ -195,8 +195,8 @@ date()</code></pre>
 <p>4 Here is the link to my GitHub repository <a href="https://github.com/yuwenpang/IODS-project" class="uri">https://github.com/yuwenpang/IODS-project</a></p>
 <hr />
 </div>
-<div id="insert-chapter-2-title-here" class="section level1">
-<h1>Insert chapter 2 title here</h1>
+<div id="insert-chapter-2-liner-regression" class="section level1">
+<h1>Insert chapter 2 Liner regression</h1>
 <p><em>Describe the work you have done this week and summarize your learning.</em></p>
 <ul>
 <li>Describe your work and results clearly.</li>
@@ -204,8 +204,14 @@ date()</code></pre>
 <li>Assume the reader has no previous knowledge of your data or the more advanced methods you are using.</li>
 </ul>
 <pre class="r"><code>date()</code></pre>
-<pre><code>## [1] &quot;Wed Nov 03 10:57:12 2021&quot;</code></pre>
-<p>Here we go again…</p>
+<pre><code>## [1] &quot;Thu Nov 04 17:11:19 2021&quot;</code></pre>
+<p>Here we go again… In this chapter I practiced how to explore the raw data and build a linear regression;</p>
+<p>1 load the data to local memory</p>
+<p>2 explore the original data by selecting and filter</p>
+<p>3 before build the regression, the pairs could help we to identify the potential explanatory variables</p>
+<p>4 the model could be conduce perfectly at first time, we could improve it generally</p>
+<p>5 the improving processes would use diagnostic plots and the summary of models</p>
+<p>6 finally, we could get a improved and acceptable models, otherwise, the linear regression would not fit the case, we should look for nonlinear regressions, such as GAM.</p>
 <hr />
 <p>(more chapters to be added similarly as we proceed with the course!)</p>
 </div>
